# simple-secret-santa

./: README.md  pyproject.toml
app/: models.py
scripts/: dev.py  start.py
